--- a/source/training/ex362.rst
+++ b/source/training/ex362.rst
@@ -1,8 +1,149 @@
 EX362 Video Prep
 ^^^^^^^^^^^^^^^^
+.. meta::
+       :description: Materials to prepare for the Red Hat Certified Specialist in Identity Management exam.
 
 This page contains the necessary resources to help you prepare for the Red Hat Certified Specialist in Identity Management exam, EX362. This follows loosely the youtube playlist as much as possible with various examples and ideas. At the bottom, you will also find our own example practice exam for you to try your hand at to test your knowledge.
 
-.. note::
-   Please note that we are not affiliated with Red Hat. The materials and examples used are our own and do not reflect the training programs provided by Red Hat and are educational only. We do not disclose any of the tasks, questions, or material on the exam as it would violate the NDA. Any questions sent to us about anything directly related to the exam will not be answered.
+The list of objectives can be found `here <https://www.redhat.com/en/services/training/ex362-red-hat-certified-specialist-identity-management-exam>`__. Note that the exam objectives can change at any time. It is the responsibility of the reader to always review the objectives prior to studying and taking the exam to ensure success.
 
+.. note::
+   Please note that we are not affiliated with Red Hat. The materials and examples used are our own and do not reflect the training programs provided by Red Hat and are educational only. We do not disclose any of the tasks, questions, or material on the exam as it would violate the NDA. Any questions sent to us about anything directly related to the exam will not be answered. We also do not provide any one-on-one tutoring or online teaching courses.
+
+   If exam objectives have changed to where the videos and this material are missing information, we can add on at any time upon request. If there are things about FreeIPA that you'd like to see in the videos that may fit into objective, we can add it also upon request.
+
+.. contents::
+
+Overview
+--------
+
+The video series goes over setting up FreeIPA in a lab/VM environment by following the objectives as outlined by Red Hat. The list of objectives can be found `here <https://www.redhat.com/en/services/training/ex362-red-hat-certified-specialist-identity-management-exam>`__. 
+
+
+Exam Information
+----------------
+
+The EX362 exam tests your knowledge in a real world format style test - Meaning just like any Red Hat exam, it is performance-based and you perform tasks as if you were on the job. You are evaluated on the tasks you perform and if they meet the objective criteria. The EX362 is related to FreeIPA or Red Hat Identity Management and counts toward the RHCA (Red Hat Certified Architect).
+
+**To take the exam, you must have at least an RHCSA. If you are attempting to become a Red Hat Certified Architect, you must have an RHCE.**
+
+Resources
+---------
+
+* `FreeIPA <https://www.freeipa.org>`__
+* `Red Hat Documentation <https://access.redhat.com/documentation/en-us/red_hat_enterprise_linux/7/>`__
+
+Installing FreeIPA/Red Hat IdM with replicas for growth and scale
+-----------------------------------------------------------------
+
++-------------------------+---------------+
+| Server Name             | IP Address    |
++=========================+===============+
+| ipa01.example.com       | 192.168.15.2  |
++-------------------------+---------------+
+| ipa02.example.com       | 192.168.15.3  |
++-------------------------+---------------+
+
+.. code-block:: shell
+
+   # Examples of using ipa-server-install
+   % ipa-server-install
+   % ipa-server-install --domain example.com --realm EXAMPLE.COM \
+       --reverse-zone=15.168.192.in-addr.arpa. \
+       --no-forwarders \
+       --no-ntp \
+       --setup-kra \
+       --setup-adtrust
+
+.. code-block:: shell
+
+   # Adding a replica
+   % ipa-replica-install
+
+   # Adding a replica unattended without forwarders
+   % ipa-client-install --realm EXAMPLE.COM
+   % kinit admin
+   % ipa hostgroup-add-member --hosts=ipa02.example.com ipaservers
+   % ipa-replica-install --setup-dns --setup-ca --no-forwarders --unattended
+
+Creating Users, Groups, and Policies
+------------------------------------
+
++-------------------------+---------------+-----------+----------+--------------+
+| Users                   | Login Name    | Type      | Group    | Role         |
++=========================+===============+===========+==========+==============+
+| John Smith              | jsmith        | Normal    | admins   |              |
++-------------------------+---------------+-----------+----------+--------------+
+| Bob Rufus               | brufus        | Normal    | corp     |              |
++-------------------------+---------------+-----------+----------+--------------+
+| Larry Dufus             | ldufus        | Normal    | helpdesk |              |
++-------------------------+---------------+-----------+----------+--------------+
+| Sys Host Management     | syshostmgt    | Normal    |          | Host Manager |
++-------------------------+---------------+-----------+----------+--------------+
+| Robert Cole             | rcole         | Staged    |          |              |
++-------------------------+---------------+-----------+----------+--------------+
+| Thomas Snyder           | tsnyder       | Preserved |          |              |
++-------------------------+---------------+-----------+----------+--------------+
+
++-------------------------+--------------------------+
+| Groups                  | Policy                   |
++=========================+==========================+
+| HelpDesk                | helpdesk                 |
++-------------------------+--------------------------+
+| corp                    |                          |
++-------------------------+--------------------------+
+| enrollers               | Enrollment Administrator |
++-------------------------+--------------------------+
+
++-------------------------+---------------------------+
+| Roles                   | Privilege                 |
++=========================+===========================+
+| Host Manager            | Host administrators       |
+|                         | Host group administrators |
+|                         | Netgroups administrators  |
+|                         | Host enrollment           |
++-------------------------+---------------------------+
+
+Install and configure IdM Clients
+---------------------------------
+
++-------------------------+---------------+
+| Client Name             | IP Address    |
++=========================+===============+
+| client.example.com      | 192.168.15.10 |
++-------------------------+---------------+
+| nfs.example.com         | 192.168.15.11 |
++-------------------------+---------------+
+
+Configure roaming/automounted home directories
+----------------------------------------------
+
+Use the REST api to query IdM
+-----------------------------
+
+Configure Kerberized services
+-----------------------------
+
+Create a trust with Active Directory
+------------------------------------
+
++-------------------------+---------------+
+| Server Name             | IP Address    |
++=========================+===============+
+| ad.example.net          | 192.168.15.12 |
++-------------------------+---------------+
+
+Configure/control policies and user access
+------------------------------------------
+
+Configure and manage a certificate authority
+--------------------------------------------
+
+Back up an IdM infrastructure
+-----------------------------
+
+Configure IdM as an LDAP backend for external services
+------------------------------------------------------
+
+Implement a SSO
+---------------
